--- a/static/css/style.less
+++ b/static/css/style.less
@@ -280,7 +280,7 @@ table {
 											background-color: @link-color;
 											padding: 5px 8px;
 											border-radius: 50%;
-											color: @plaintext-color;
+											color: @background-color;
 										}
 									}
 
@@ -377,7 +377,40 @@ table {
 							border-top: 1px solid @link-color;
 
 							.b-chat-reply {
+								display: flex;
+								padding: 10px;
 
+								.b-attach-file {
+									margin-right: 10px;
+									align-self: center;
+									cursor: pointer;
+
+									.b-image {
+										display: flex;
+									}
+								}
+
+								&>.b-input, &>.b-submit {
+									border-color: @link-color;
+									outline-color: @link-color;
+									color: @plaintext-color;
+									background: @shadow-color;
+									font-family: 'classic-console', Arial, Helvetica, sans-serif;
+									font-size: 1.2em;
+
+									&:hover {
+										outline: none;
+									}
+								}
+
+								.b-input {
+									padding-left: 5px;
+									flex-grow: 1;
+								}
+								.b-submit {
+									margin-left: 10px;
+									padding-top: 5px;
+								}
 							}
 
 						}
