--- a/static/css/style.less
+++ b/static/css/style.less
@@ -218,6 +218,7 @@ table {
 
 							.b-conversations-search {
 								display: flex;
+								flex-grow: 1;
 
 								&>* {
 									border-color: @link-color;
@@ -234,7 +235,7 @@ table {
 
 								.b-input {
 									height: 25px;
-									width: 290px;
+									width: 100%;
 									padding-left: 5px;
 								}
 							}
