--- a/static/css/style.less
+++ b/static/css/style.less
@@ -547,6 +547,71 @@ table {
 }
 
 
+/* Profile Page */
+.b-profile-page-wrapper {
+	display: flex;
+	flex-grow: 1;
+
+	.b-profile-page {
+		display: flex;
+		flex-grow: 1;
+
+		.b-profile-goback-wrapper {
+			display: flex;
+			border-right: 1px solid @link-color;
+
+			.b-profile-goback {
+				align-self: center;
+				padding: 0 20px;
+			}
+		}
+
+		.b-profile-wrapper {
+			display: flex;
+			flex-grow: 1;
+			justify-content: center;
+
+			.b-profile {
+				width: 600px;
+    			text-align: center;
+
+				.b-profile-avatar-wrapper {
+					margin: 60px 0 20px;
+
+					.b-profile-avatar {
+						border-radius: 50%;
+					}
+				}
+
+				.b-profile-name-wrapper {
+					margin-bottom: 60px;
+
+					.b-profile-name {
+						color: #6f6;    
+						font-size: 2em;
+					}
+				}
+
+				.b-profile-field-wrapper {
+					.b-profile-field {
+						display: flex;
+
+						.b-profile-field-label {
+
+						}
+
+						.b-profile-field-value {
+							margin-left: auto;
+						}
+					}
+				}
+
+			}
+		}
+	}
+}
+
+
 
 /* TODO put this in proper components */
 .b-avatar-wrapper {
