--- a/static/css/style.less
+++ b/static/css/style.less
@@ -142,6 +142,8 @@ table {
 @highlight-color: #FFFF33;
 @background-color: #4c4c4c;
 @black-color: #000000;
+@light-gray: #858585;
+
 
 @font-face {
 	font-family: 'classic-console';
@@ -152,6 +154,9 @@ table {
 
 }
 
+body, body .b-input, body .b-submit {
+	font-family: 'classic-console', Arial, Helvetica, sans-serif;
+}
 
 .b-page-wrapper {
 	display: flex;
@@ -159,7 +164,6 @@ table {
 	min-height: 100vh;
 	background: @shadow-color;
 
-	font-family: 'classic-console', Arial, Helvetica, sans-serif;
 	outline-color: @plaintext-color;
 
 	.b-page {
@@ -521,7 +525,6 @@ table {
 			outline-color: @link-color;
 			color: @plaintext-color;
 			background: @shadow-color;
-			font-family: 'classic-console', Arial, Helvetica, sans-serif;
 			font-size: 1.1em;
 			padding: 5px;
 		
@@ -562,7 +565,7 @@ table {
 
 			.b-profile-goback {
 				align-self: center;
-				padding: 0 20px;
+				padding: 0 15px;
 			}
 		}
 
@@ -577,9 +580,39 @@ table {
 
 				.b-profile-avatar-wrapper {
 					margin: 60px 0 20px;
+					height: 130px;
+					position: relative;
+					z-index: 100;
+					overflow: hidden;
+
+					&:hover .b-profile-avatar-change-wrapper {
+						transition: 500ms ease-out top;
+						top: -136px;
+					}
 
 					.b-profile-avatar {
 						border-radius: 50%;
+					}
+
+					.b-profile-avatar-change-wrapper {
+						transition: 500ms ease-out top;
+						position: relative;
+						z-index: 10;
+						top: 135px;
+
+						&>.b-link {
+							line-height: 130px;
+							background: @shadow-color;
+							display: inline-block;
+							width: 132px;
+							height: 132px;
+							border-radius: 50%;
+
+							&:hover {
+								color: @link-color;
+								text-decoration: underline;
+							}
+						}
 					}
 				}
 
@@ -593,6 +626,10 @@ table {
 				}
 
 				.b-profile-field-wrapper {
+					color: @plaintext-color;
+					border-bottom: 1px solid @plaintext-color;
+					padding: 20px 0 2px 0;
+
 					.b-profile-field {
 						display: flex;
 
@@ -602,7 +639,31 @@ table {
 
 						.b-profile-field-value {
 							margin-left: auto;
+							color: @light-gray;
+
+							&.b-input {
+								color: @plaintext-color;
+								font-family: 'classic-console', Arial, Helvetica, sans-serif;
+								font-size: 1em;
+								background: none;
+								border: none;
+								text-align: right;
+								outline: none;
+								padding: 0 0 2px 0;
+							}
 						}
+					}
+				}
+
+				.b-profile-contol-wrapper {
+					text-align: left;
+					padding: 8px 0 1px 0;
+
+					&.first {
+						margin-top: 50px;
+					}
+
+					.b-profile-contol {
 					}
 				}
 
@@ -640,5 +701,66 @@ table {
 	&:hover {
 		color: @highlight-color;
 		text-decoration: none;
+		cursor: pointer;
+	}
+}
+
+/* modalWindow */
+.b-modal-window-wrapper {
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+	background: @shadow-color;
+	opacity: .99;
+	transition: 500ms ease-in-out all;
+
+	&.state__visible {
+		display: flex;
+	}
+
+
+	.b-modal-window {
+		display: flex;
+		flex-grow: 1;
+		justify-content: center;
+		align-items: center;
+
+		.b-modal-window-content {
+			width: 600px;
+			border-radius: 15px;
+			background: @background-color;
+			position: relative;
+			left: 32px;
+			text-align: center;
+
+			.b-modal-window-title {
+				text-align: center;
+				font-size: 2em;
+				color: @link-color;
+
+				margin: 30px 0;
+			}
+
+			.b-link {
+				display: block;
+				margin: 0 0 20px 0;
+			}
+
+			.b-input {
+				display: none;
+			}
+
+			.b-submit {
+				margin: 0 0 30px;
+				border-color: @link-color;
+				outline-color: @link-color;
+				color: @plaintext-color;
+				background: @shadow-color;
+				font-size: 1.1em;
+				padding: 5px;
+			}
+		}
 	}
 }
