--- a/static/css/style.less
+++ b/static/css/style.less
@@ -154,7 +154,9 @@ table {
 
 }
 
-body, body .b-input, body .b-submit {
+body,
+body .b-input,
+body .b-submit {
 	font-family: 'classic-console', Arial, Helvetica, sans-serif;
 }
 
@@ -209,9 +211,8 @@ body, body .b-input, body .b-submit {
 
 									margin-left: auto;
 								}
-								
-								.b-logout {
-								}
+
+								.b-logout {}
 							}
 						}
 
@@ -248,11 +249,11 @@ body, body .b-input, body .b-submit {
 						.b-conversations-list-wrapper {
 							.b-conversations-list {
 								.b-conversation-wrapper {
-										cursor: pointer;
+									cursor: pointer;
 
-										&.state__active {
-											background-color: @background-color;
-										}
+									&.state__active {
+										background-color: @background-color;
+									}
 
 									.b-conversation {
 										display: flex;
@@ -323,7 +324,7 @@ body, body .b-input, body .b-submit {
 
 						.b-chat-window-empty {
 							align-self: center;
-							width: 100%; 
+							width: 100%;
 							font-size: 2em;
 							text-align: center;
 						}
@@ -334,13 +335,14 @@ body, body .b-input, body .b-submit {
 						flex-direction: column;
 						width: 100%;
 
-						
+
 
 						.b-chat-info-wrapper {
 							display: flex;
 							height: 88px;
 							border-bottom: 1px solid @link-color;
-							
+							position: relative;
+
 							.b-chat-info {
 								display: flex;
 								width: 100%;
@@ -349,7 +351,7 @@ body, body .b-input, body .b-submit {
 									align-self: center;
 									padding-left: 10px;
 								}
-								
+
 								.b-profile-title {
 									align-self: center;
 									padding: 3px 0 0 5px;
@@ -359,6 +361,25 @@ body, body .b-input, body .b-submit {
 									align-self: center;
 									margin-left: auto;
 									padding-right: 10px;
+								}
+							}
+
+							.b-chat-settings-wrapper {
+								transition: 500ms ease-in-out all;
+								display: none;
+								position: absolute;
+								right: 10px;
+								top: 100px;
+								z-index: 10;
+								border: 1px solid @link-color;
+								padding: 10px;
+								border-radius: 10px;
+								background: @shadow-color;
+
+								.b-chat-settings {
+									display: flex;
+									flex-direction: column;
+									text-align: right;
 								}
 							}
 						}
@@ -401,6 +422,7 @@ body, body .b-input, body .b-submit {
 
 						.b-chat-reply-wrapper {
 							height: 50px;
+							position: relative;
 							border-top: 1px solid @link-color;
 
 							.b-chat-reply {
@@ -417,7 +439,8 @@ body, body .b-input, body .b-submit {
 									}
 								}
 
-								&>.b-input, &>.b-submit {
+								&>.b-input,
+								&>.b-submit {
 									border-color: @link-color;
 									outline-color: @link-color;
 									color: @plaintext-color;
@@ -434,12 +457,30 @@ body, body .b-input, body .b-submit {
 									padding-left: 5px;
 									flex-grow: 1;
 								}
+
 								.b-submit {
 									margin-left: 10px;
 									padding-top: 5px;
 								}
 							}
 
+							.b-chat-reply-attachment-wrapper {
+								z-index: 10;
+								background: #333;
+								border: 1px solid #6f6;
+								border-radius: 10px;
+								padding: 10px;
+								transition: all .5s ease-in-out;
+								display: none;
+								position: absolute;
+								bottom: 57px;
+    							left: 10px;
+
+								.b-chat-reply-attachment {
+									display: flex;
+									flex-direction: column;
+								}
+							}
 						}
 					}
 				}
@@ -450,33 +491,33 @@ body, body .b-input, body .b-submit {
 
 /* 400.html */
 .b-page-wrapper {
-    .b-page {
+	.b-page {
 
-        .b-error-wrapper {
-            display: flex;
-            flex-grow: 1;
+		.b-error-wrapper {
+			display: flex;
+			flex-grow: 1;
 
-            .b-error {
-                display: flex;
-                flex-direction: column;
-                flex-grow: 1;
-                align-self: center;
-                text-align: center;
+			.b-error {
+				display: flex;
+				flex-direction: column;
+				flex-grow: 1;
+				align-self: center;
+				text-align: center;
 
 
-                .b-error-title {
-                    font-size: 4em;
-                    color: @link-color;
-                }
+				.b-error-title {
+					font-size: 4em;
+					color: @link-color;
+				}
 
 				.b-error-message {
 					color: @plaintext-color;
 					font-size: 1.5em;
 					padding: 2em 0 1.3em;
 				}
-            }
-        }
-    }
+			}
+		}
+	}
 }
 
 
@@ -493,14 +534,14 @@ body, body .b-input, body .b-submit {
 
 		.b-page-title {
 			font-size: 2em;
-            color: @link-color;
+			color: @link-color;
 			padding: 50px 0 40px;
 			text-align: center;
 		}
 
 		.b-input-wrapper {
 			display: flex;
-			flex-direction: column;	
+			flex-direction: column;
 			padding: 10px 0;
 
 			.b-label {
@@ -515,19 +556,20 @@ body, body .b-input, body .b-submit {
 
 			.b-input-state {
 				padding-top: 5px;
-				color:#FFFF33;
+				color: #FFFF33;
 				font-size: 0.8em;
 			}
 		}
 
-		.b-input, .b-submit {
+		.b-input,
+		.b-submit {
 			border-color: @link-color;
 			outline-color: @link-color;
 			color: @plaintext-color;
 			background: @shadow-color;
 			font-size: 1.1em;
 			padding: 5px;
-		
+
 			&:hover {
 				outline: none;
 			}
@@ -536,7 +578,7 @@ body, body .b-input, body .b-submit {
 		.b-submit-wrapper {
 			display: flex;
 			justify-content: center;
-			margin: 80px 0 10px;    
+			margin: 80px 0 10px;
 
 			.b-submit {
 				text-align: center;
@@ -576,7 +618,7 @@ body, body .b-input, body .b-submit {
 
 			.b-profile {
 				width: 600px;
-    			text-align: center;
+				text-align: center;
 
 				.b-profile-avatar-wrapper {
 					margin: 60px 0 20px;
@@ -608,10 +650,7 @@ body, body .b-input, body .b-submit {
 							height: 132px;
 							border-radius: 50%;
 
-							&:hover {
-								color: @link-color;
-								text-decoration: underline;
-							}
+							&:hover {}
 						}
 					}
 				}
@@ -620,7 +659,7 @@ body, body .b-input, body .b-submit {
 					margin-bottom: 60px;
 
 					.b-profile-name {
-						color: #6f6;    
+						color: #6f6;
 						font-size: 2em;
 					}
 				}
@@ -633,9 +672,7 @@ body, body .b-input, body .b-submit {
 					.b-profile-field {
 						display: flex;
 
-						.b-profile-field-label {
-
-						}
+						.b-profile-field-label {}
 
 						.b-profile-field-value {
 							margin-left: auto;
@@ -663,8 +700,7 @@ body, body .b-input, body .b-submit {
 						margin-top: 50px;
 					}
 
-					.b-profile-contol {
-					}
+					.b-profile-contol {}
 				}
 
 			}
@@ -684,8 +720,7 @@ body, body .b-input, body .b-submit {
 		height: 47px;
 		border-radius: 50%;
 
-		&.state__empty {
-		}
+		&.state__empty {}
 	}
 }
 
@@ -706,6 +741,10 @@ body, body .b-input, body .b-submit {
 }
 
 /* modalWindow */
+.state__visible {
+	display: flex !important;
+}
+
 .b-modal-window-wrapper {
 	display: none;
 	position: absolute;
@@ -713,15 +752,15 @@ body, body .b-input, body .b-submit {
 	height: 100%;
 	z-index: 1000;
 	background: @shadow-color;
-	opacity: .99;
+	opacity: .8;
 	transition: 500ms ease-in-out all;
 
-	&.state__visible {
-		display: flex;
-	}
-
-
 	.b-modal-window {
+		position: relative;
+		z-index: 10000;
+	}
+	/* profile page modal window */
+	.b-modal-window.b-profile-page {
 		display: flex;
 		flex-grow: 1;
 		justify-content: center;
@@ -750,6 +789,59 @@ body, body .b-input, body .b-submit {
 
 			.b-input {
 				display: none;
+			}
+
+			.b-submit {
+				margin: 0 0 30px;
+				border-color: @link-color;
+				outline-color: @link-color;
+				color: @plaintext-color;
+				background: @shadow-color;
+				font-size: 1.1em;
+				padding: 5px;
+			}
+		}
+	}
+
+	/* chat page modal window */
+	.b-modal-window.b-chat-page {
+		display: flex;
+		flex-grow: 1;
+		justify-content: center;
+		align-items: center;
+
+		.b-modal-window-content {
+			display: flex;
+			align-items: center;
+			width: 600px;
+			border-radius: 15px;
+			background: @background-color;
+			position: relative;
+			flex-direction: column;
+			text-align: center;
+
+			.b-modal-window-title {
+				text-align: center;
+				font-size: 2em;
+				color: @link-color;
+
+				margin: 30px 0 10px;
+			}
+
+			.b-link {
+				display: block;
+				margin: 0 0 20px 0;
+			}
+
+			.b-input {
+				border-color: @link-color;
+				outline-color: @link-color;
+				color: @plaintext-color;
+				background: @shadow-color;
+				font-family: 'classic-console', Arial, Helvetica, sans-serif;
+				font-size: 1.2em;
+				margin: 0 0 10px 0;
+				padding-left: 5px;
 			}
 
 			.b-submit {
